<resources>
    <string name="app_name">Bilkent360</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_schedule">Schedule</string>
    <string name="nav_share">Share Bilkent</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_taks">Tasks</string>
    <string name="nav_buildings">Buildings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_log_out">Logout</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Schedule</item>
        <item>Share Bilkent</item>
        <item>Calendar</item>
        <item>Tasks</item>
        <item>Buildings</item>
    </string-array>

    <string-array name="admin_item_activity_titles">
        <item>Calendar</item>
        <item>Buildings</item>
    </string-array>

    <string name="action_add_buildings">Add Buildings</string>
    <string name="action_requested_buildings">Requested Buildings</string>
    <string name="action_add_blogs">Add Blog</string>
    <string name="action_add_event">Add Event</string>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!--BUILDING DIALOG STRINGS-->
    <string name="dialog_buildingName">Name</string>
    <string name="dialog_latitude">Latitude</string>
    <string name="dialog_longitude">Longitute</string>
    <string name="dialog_title">Add New Building</string>
    <string name="dialog_button">ADD BUILDING</string>
    <string name="title_addNewBuild">Add</string>
    <string name="dialog_requested_title">Building Info</string>
    <string name="dialog_cancel_building">ERASE BUILDING</string>
    <string name="dialog_exit_building">EXIT</string>
    <string name="dialog_event_title">EVENT DETAILS</string>
    <string name="dialog_event_add">Modify Event</string>
    <string name="dialog_event_erase">Erase Event</string>
    <!--LOGIN AND PASSWORD STRINGS-->
    <string name="background_email">Email</string>
    <string name="background_password">Password</string>
    <string name="signin_buttonMessage">Sign In</string>
    <string name="signup_buttonMessage">Sign Up</string>
    <string name="forgotPasswordMessage">Forgot Password?</string>
    <string name="background_name">Name</string>
    <string name="password_reset">Reset Password</string>
    <string name="mail_hint">Enter your email</string>
    <string name="forgotMessage">We just need your registered email to sent you password reset instruction!</string>
    <string name="forgotGoBack">Back</string>
    <string name="action_add_courses">Add Course</string>
    <string name="action_manage_string">Manage Schedule</string>
    <!--CALENDAR STRINGS-->
    <string name="dialog_calendar">ADD NEW EVENT</string>


    <!--ABOUT STRINGS-->
    <string name="title_contributors">Contributors</string>
    <string name="member_aurel">Aurel Hoxha</string>
    <string name="member_shabnam">Shabnam Sadigova</string>
    <string name="member_amr">Amr El Shimy</string>
    <string name="project_location">Bilkent University\nAnkara,Turkey</string>
    <string name="title_activity_maps">Map</string>

    <string-array name="day_arrays">
        <item>Choose a day..</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string-array name="firstHour">
        <item>Starting Time...</item>
        <item>08:40</item>
        <item>09:40</item>
        <item>10:40</item>
        <item>11:40</item>
        <item>12:40</item>
        <item>13:40</item>
        <item>14:40</item>
        <item>15:40</item>
        <item>16:40</item>
    </string-array>

    <string-array name="secondHour">
        <item>Finishing Time...</item>
        <item>09:30</item>
        <item>10:30</item>
        <item>11:30</item>
        <item>12:30</item>
        <item>13:30</item>
        <item>14:30</item>
        <item>15:30</item>
        <item>16:30</item>
        <item>17:30</item>
    </string-array>

</resources>
