<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSignIn"
    tools:context="aurelhoxha.bilkent360.activity.ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        tools:ignore="UselessParent">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/finger"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/changePassMessage"
        android:hint="@string/forgotMessage"
        android:layout_width="match_parent"
        android:alpha="0.3"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColorHint="@color/myWhiteColor"
        />

    <EditText
        android:id="@+id/changePassText"
        android:hint="@string/mail_hint"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:alpha="0.3"
        android:textColor="@color/myWhiteColor"
        android:textColorHint="@color/myWhiteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/changePassBtn"
        android:text="@string/password_reset"
        android:background="@color/colorPrimary"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    <TextView
        android:id="@+id/changePassGoBack"
        android:hint="@string/forgotGoBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColorHint="@color/myWhiteColor"
        />
    </LinearLayout>

</RelativeLayout>
