<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/dialog_event_title"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/eventDate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:ems="10" />

    <EditText
        android:id="@+id/eventName"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:ems="10"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btnModifyEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/dialog_event_add"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/btnCalcelEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/dialog_event_erase"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/btnExitDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:text="@string/dialog_exit_building"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>


</LinearLayout>