<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorSignIn"
    android:layout_height="match_parent"
    tools:context="aurelhoxha.bilkent360.activity.AboutUs">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/finger"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView2"
            android:alpha="0.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/title_contributors"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="30sp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/member_aurel"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/member_shabnam"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/member_amr"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="end"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1"
        tools:ignore="UseCompoundDrawables">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/location"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:alpha="0.3"
            android:layout_marginBottom="10dp"
            android:text="@string/project_location"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/common_google_signin_btn_text_dark_default"/>
    </LinearLayout>


</LinearLayout>
