<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSignIn"
    tools:context="aurelhoxha.bilkent360.activity.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/finger"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:alpha="0.3"
            android:background="#000000">

            <ImageView
                android:id="@+id/personId"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="7dp"
                app:srcCompat="@drawable/person"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/loginEmailId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:ems="10"
                android:hint="@string/background_email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:alpha="0.3"
            android:background="#000000">

            <ImageView
                android:id="@+id/keyId"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="7dp"
                app:srcCompat="@drawable/lock"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/loginPasswordId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/background_password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/signInButtonId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimary"
            android:text="@string/signin_buttonMessage"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/signUpButtonId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorRegister"
            android:text="@string/signup_buttonMessage"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/forgotPassId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/forgotPasswordMessage"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>


</RelativeLayout>